kubernetes/apps/base/semaphore/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`semaphore.${cluster_domain}`)
      kind: Rule
      services:
        - name: semaphore
          port: 3000
