kubernetes/apps/base/semaphore/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`semaphore.theblacklodge.dev`)
      kind: Rule
      services:
        - name: semaphore
          port: 3000
